--- a/views/partials/burgers/burger-devoured.handlebars
+++ b/views/partials/burgers/burger-devoured.handlebars
@@ -1,7 +1,6 @@
 <li class="devoured-burger-name list-group-item">
 
     <!--Throw away burger button-->
-    <button class="devoure-burger btn btn-primary" data-id="{{this.id}}"><i class="far fa-trash-alt"></i> Eat
-        Burger</button>
+    <button class="devoure-burger btn btn-primary mb-2 mt-2" data-id="{{this.id}}">Eat Burger</button>
     {{burger_name}}
 </li>
