--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,52 +1,52 @@
+<div class="jumbotron">
+    <h1 class="text-center">Burgers! 🍔</h1>
+    <hr class="my-4">
+</div>
+
 <div class="container">
-    <div class="jumbotron">
-        <h1 class="text-center h1">Burgers! 🍔</h1>
-    </div>
-
     <div class="row">
-        <div class="col-md-6 col-sm-12">
+        <div class="container col-md-6">
             <h2 class="text-center">Devoured Burgers</h2>
-            <ol>
-
+            <ul>
                 {{#each burger_name}}
                 {{#if devoured}}
-                <li class="list-group-item">
-                    {{burger_name}}
-                </li>
+                <li class="list-group-item">{{burger_name}}</li>
                 {{/if}}
                 {{/each}}
 
-            </ol>
-        </div>
-        <div class="col-md-6 col-sm-12">
-            <h2 class="text-center h2">Burgers to devour</h2>
-
-            <ul>
-
-                {{#each burger_name}}
-                {{#unless devoured}}
-
-                {{> burgers/burger-devoured devoured=true}}
-
-                {{/unless}}
-                {{/each}}
-                <br>
             </ul>
         </div>
-    </div>
-    <div class='row'>
-        <div class="col-4"></div>
-        <div class="col-4" id='burger-submit'>
-            <h2 class="text-center h2">Add a Burger</h2>
-            <form class="create-form">
-                <div class="form-group">
-                    <label for="ca">Burger Name:</label>
-                    <input type="text" id="newBurger" name="name">
-                </div>
-                <button class="btn btn-success" type="submit">Add A Burger</button>
-            </form>
-            <br>
+        <div class="container col-md-6">
+            <h2 class="text-center">Burgers to devour!</h2>
+            <ul>
+                {{#each burger_name}}
+
+                {{#unless devoured}}
+                {{> burgers/burger-devoured devoured=true}}
+                {{/unless}}
+                {{/each}}
+
+            </ul>
         </div>
-        <div class="col-4"></div>
+
     </div>
+</div>
+<div class="container">
+    <h2 class="text-center">Add a burger!</h2>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <form class="create-form ">
+                    <label for="newBurger">Burger Name 🍔 </label>
+                    <input type="text" id="newBurger" name="name" class="form-control">
+
+                    <button type="submit" class="btn btn-primary mt-2">Add Burger!</button>
+                </form>
+            </div>
+
+
+        </div>
+    </div>
+
 </div>
